# admin-rag

./: .dockerignore  .env.template  .gitignore  CLAUDE.md  Dockerfile  FLOW.md  Makefile  README.md  TODO.md  pyproject.toml
aws/: template.yaml
config/: qdrant_config.json.template
scripts/: README.md  create_sam_env.py  embed_chunks.py  explore_agentpublic_dataset.py  run_vast_ingestion.py  test_embedding_latency.py  test_model_load_time.py
src/agents/: answer_generator.py  citation_formatter.py  multi_retriever.py  routing_agent.py
src/config/: __init__.py  constants.py
src/ingestion/: analyze_article_lengths.py  parse_code_travail.py  parse_kali.py
src/ingestion/chunkers/: article_chunker.py
src/ingestion/parsers/: code_travail_parser.py  kali_parser.py  section_parser.py
src/retrieval/: app.py  ingest_code_travail.py  ingest_kali.py  retrieve.py
terraform/: README.md  api_gateway.tf  cleanup_api_gateway.sh  iam.tf  lambda.tf  output.tf  outputs.tf  provider.tf  variables.tf
tests/: test_answer_generator.py  test_multi_retriever.py  test_routing_agent.py
