[tool.poetry]
name = "admin-rag"
version = "0.1.0"
description = "Agentic RAG system for French labor law using Code du travail and KALI corpus"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
haystack-ai = "^2.0.0"
lxml = "^5.0.0"
beautifulsoup4 = "^4.12.0"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"

# Optional dependencies - uncomment as needed
# qdrant-haystack = "^4.0.0"
# weaviate-haystack = "^1.0.0"
# anthropic-haystack = "^1.0.0"
# mistralai-haystack = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
jupyter = "^1.0.0"
ipykernel = "^6.0.0"
black = "^24.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
